tuesday at 3 commit

--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,7 @@
         <script type="text/javascript" src="js/hammer.js"></script>
     	<script type="text/javascript" src="js/ajax.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/phototake.js"></script>
         
 
         
